--- a/contents/04-dimension.qmd
+++ b/contents/04-dimension.qmd
@@ -17,6 +17,8 @@ format:
 
 * TD: [link](../td/04-dimension-td.qmd)
 
+  - [Corrigé](../td/correction/Td_ Dimension.pdf)
+
 * TP: [link](../tp/04-dimension-tp.qmd)
 
 ## Sommaire
