--- a/slides/06-unsupervised-kmeans-slides.qmd
+++ b/slides/06-unsupervised-kmeans-slides.qmd
@@ -3,7 +3,7 @@ title: "Non-supervisée"
 subtitle: "$k$-moyennes"
 author: "Steven Golovkine"
 lang: fr
-date: today
+date: "28 nov. 2025"
 date-format: "DD MMM YYYY"
 slide-number: c/t
 title-logo: ../include/logo-ul.png
@@ -17,242 +17,267 @@ format:
       - title-slide.html
 --- 
 
-# Classification non-supervisée
 
-## Objectif de la classification non-supervisée
+## Plan
 
-::: {.fragment}
-**Données**
-$n$ observations $X_1, \ldots, X_n$ décrites par $p$ variables numériques
-:::
 
-::: {.fragment}
-**Préparation**
-Variables généralement standardisées pour éviter les effets d'échelle
-:::
+<br>
 
-::: {.fragment}
-**Objectif**
-Regrouper en $K$ groupes tels que :
-1. **Intra-groupe** : Observations similaires
-2. **Inter-groupe** : Groupes distincts
-:::
+1. Généralités
+
+2. $k$-moyennes
+
+3. Extension
+
+4. Exemple
+
 
 ## Fonction de classification
 
-::: {.fragment}
-**Définition**
+<br>
+
 $$C: \{1, \ldots, n\} \to \{1, \ldots, K\}$$
-Associe à chaque observation $i$ une étiquette de groupe $C(i)$
-:::
+Associe à chaque observation $i$ une étiquette de groupe $C(i)$.
 
-::: {.fragment}
-**Fonction de coût**
+## Fonction de coût
+
+<br>
+
 $$W(C) = \sum_{k=1}^{K} \sum_{i: C(i)=k} \sum_{j: C(j)=k} d(X_i, X_j)$$
-où $d(X_i, X_j)$ mesure la dissimilarité entre observations
-:::
+où $d(X_i, X_j)$ mesure la dissimilarité entre observations.
 
-::: {.fragment}
-**Objectif** : Minimiser $W(C)$ (cohésion intra-groupe)
-:::
+. . .
+
+<br>
+
+Objectif → Minimiser $W(C)$ (cohésion intra-groupe).
+
 
 ## Complexité du problème
 
-::: {.fragment}
-**Problème d'optimisation combinatoire**
-- $K^n$ combinaisons possibles
-- Exploration exhaustive impossible même pour petites valeurs
-:::
+<br>
 
-::: {.fragment}
-**Solution pratique : Algorithmes gloutons**
-- Exploration d'un sous-ensemble restreint
-- Amélioration itérative progressive
-- Convergence vers un **minimum local**
-:::
+Problème d'optimisation combinatoire :
 
-::: {.fragment}
-**Hypothèses**
-1. Variables numériques, souvent centrées-réduites
-2. Nombre de groupes $K$ fixé à l'avance
-:::
+- $K^n$ combinaisons possibles.
 
-# Algorithme $k$-moyennes
+- Exploration exhaustive impossible même pour petites valeurs.
 
-## Principe général
+. . .
 
-::: {.fragment}
-**Objectif**
-Regrouper $n$ observations en $K$ groupes homogènes
-:::
+Solution pratique : Algorithmes gloutons 
 
-::: {.fragment}
-**Mesure de dissimilarité**
-Généralement la **distance euclidienne** pour données quantitatives
-:::
+- Exploration d'un sous-ensemble restreint.
 
-::: {.fragment}
-**Stratégie**
-- Observations proches au sein d'un groupe
-- Groupes éloignés entre eux
-:::
+- Amélioration itérative progressive.
+
+- Convergence vers un minimum local.
+
+
+## Hypothèses pour les $k$-moyennes
+
+<br>
+
+1. Variables numériques, souvent centrées-réduites.
+
+2. Nombre de groupes $K$ fixé à l'avance.
+
+
+## Algorithme des $k$-moyennes
+
+<br>
+
+Objectif → Regrouper $n$ observations en $K$ groupes homogènes.
+
+. . .
+
+Mesure de dissimilarité → généralement distance euclidienne.
+
+. . .
+
+Stratégie :
+
+- Observations proches au sein d'un groupe.
+
+- Groupes éloignés entre eux.
+
 
 ## Algorithme détaillé
 
 ::: {.incremental}
-1. **Choix de $K$** : Nombre de groupes fixé à l'avance
+1. Choix de $K$ : Nombre de groupes fixé à l'avance.
 
-2. **Initialisation** : Partition aléatoire ou centres initiaux aléatoires
+2. Initialisation : Partition aléatoire ou centres initiaux aléatoires.
 
-3. **Calcul des centroïdes** :
+3. Calcul des centroïdes :
    $$\mu_k = \frac{1}{N_k} \sum_{i: C(i)=k} X_i$$
 
-4. **Réaffectation** : Chaque observation au centre le plus proche
+4. Réaffectation : Chaque observation au centre le plus proche.
 
-5. **Itération** : Répéter 3-4 jusqu'à stabilisation
+5. Itération : Répéter 3-4 jusqu'à stabilisation.
 :::
 
 ## Convergence
 
-::: {.fragment}
-**Garantie de convergence**
-En nombre fini d'itérations
-:::
+<br>
 
-::: {.fragment}
-**Mécanisme**
-Chaque étape réduit l'**inertie intra-groupe**
-(somme des distances observations ↔ centroïdes)
-:::
+Garantie de convergence en nombre fini d'itérations.
 
-::: {.fragment}
-**⚠️ Limitation importante**
-Convergence vers un **minimum local**, pas nécessairement global
-:::
+. . .
+
+Chaque étape réduit l'inertie intra-groupe (somme des distances observations / centroïdes).
+
+. . .
+
+⚠️ Limitation importante → Convergence vers un minimum local, pas nécessairement global.
+
 
 ## Limites des $k$-moyennes
 
 ::: {.incremental}
-1. **Sensibilité à l'initialisation**
-   - Résultats variables selon centres initiaux
-   - Solution : Algorithme $k$-means++
+1. Sensibilité à l'initialisation
 
-2. **Choix de $K$ à l'avance**
-   - Pas toujours évident
-   - Critères : Silhouette, méthode du coude, BIC/AIC
+   - Résultats variables selon centres initiaux.
 
-3. **Coût computationnel**
-   - Recalcul de toutes les distances à chaque itération
-   - Problématique pour grand $n$ ou $p$
+   - Solution : Algorithme $k$-means++.
+
+2. Choix de $K$ à l'avance
+
+   - Pas toujours évident.
+
+   - Critères : Silhouette, méthode du coude, BIC/AIC.
+
+3. Coût computationnel
+
+   - Recalcul de toutes les distances à chaque itération.
+
+   - Problématique pour grand $N$ ou $P$.
 :::
 
-## Limites (suite)
+## Limites
 
-::: {.fragment}
-4. **Sensibilité aux valeurs extrêmes**
-   - La moyenne influencée par observations atypiques
-   - Centroïdes faussés
-   - Regroupements incohérents
-:::
+<br>
 
-::: {.fragment}
-**Conséquence**
-Nécessité de prétraiter les données (détection d'outliers)
-:::
+4. Sensibilité aux valeurs extrêmes
 
-# Algorithme $k$-médoïdes
+   - La moyenne est influencée par les observations atypiques.
 
-## Principe des $k$-médoïdes
+   - Les centroïdes sont faussés.
 
-::: {.fragment}
-**Différence fondamentale**
-Utilise des **observations réelles** comme représentants (pas des moyennes)
-:::
+   - Les regroupements sont incohérents.
 
-::: {.fragment}
-**Médoïde**
-Observation qui minimise la somme des distances aux autres observations du même groupe
-:::
+. . .
 
-::: {.fragment}
-**Avantage conceptuel**
-Représentants concrets et interprétables
-:::
+Conséquence → Nécessité de prétraiter les données (détection d'outliers).
+
+
+## $k$-médoïdes
+
+<br>
+
+Différence avec $k$-means → Utilise des observations réelles comme représentants (pas des moyennes).
+
+. . .
+
+Médoïde → Observation qui minimise la somme des distances aux autres observations du même groupe.
+
+. . .
+
+Avantage conceptuel → Représentants concrets et interprétables
+
 
 ## Avantages des $k$-médoïdes
 
+<br>
+
 ::: {.incremental}
-1. **Robustesse aux valeurs extrêmes**
-   - Médoïdes moins sensibles que moyennes
-   - Meilleure résistance aux outliers
+1. Robustesse aux valeurs extrêmes
 
-2. **Compatibilité étendue**
-   - Variables ordinales ou catégorielles
-   - Mesures de dissimilarité personnalisées
+   - Médoïdes moins sensibles que moyennes.
 
-3. **Flexibilité**
-   - Matrice de dissimilarité sur mesure
-   - Adaptée à la nature des données
+   - Meilleure résistance aux outliers.
+
+2. Flexibilité
+
+   - Matrice de dissimilarité personnalisées..
+
+   - Adaptée à la nature des données (variables ordinales ou catégorielles).
 :::
 
 ## Inconvénients des $k$-médoïdes
 
-::: {.fragment}
-**Problèmes partagés avec $k$-moyennes**
-- Choix de $K$ à l'avance
-- Convergence vers minimum local
-:::
+<br>
 
-::: {.fragment}
-**Coût computationnel plus élevé**
+Problèmes partagés avec $k$-moyennes :
+
+- Choix de $K$ à l'avance
+
+- Convergence vers minimum local
+
+
+. . .
+
+Coût computationnel plus élevé :
+
 - Calculs plus complexes pour identifier médoïdes
+
 - Particulièrement avec distances non-euclidiennes
+
 - Problématique pour grands jeux de données
-:::
+
 
 ## Comparaison des méthodes
 
-::: {.fragment}
+<br>
+
 | Aspect | $k$-moyennes | $k$-médoïdes |
 |--------|--------------|--------------|
-| **Représentants** | Centroïdes (moyennes) | Observations réelles |
-| **Robustesse** | Sensible aux outliers | Plus robuste |
-| **Types de variables** | Numériques | Numériques + ordinales |
-| **Coût computationnel** | Modéré | Plus élevé |
-| **Interprétabilité** | Abstraite | Concrète |
-:::
+| Représentants | Centroïdes (moyennes) | Observations réelles |
+| Robustesse | Sensible aux outliers | Plus robuste |
+| Types de variables | Numériques | Numériques + ordinales |
+| Coût computationnel | Modéré | Plus élevé |
+| Interprétabilité | Abstraite | Concrète |
+
 
 ## Critères de choix de $K$
 
 ::: {.incremental}
-1. **Méthode du coude (Elbow method)**
+1. Méthode du coude (Elbow method)
+
    - Graphique inertie vs $K$
+
    - Recherche du "coude"
 
-2. **Coefficient de silhouette**
+2. Coefficient de silhouette
+
    - Mesure qualité des groupes
+
    - Valeurs entre -1 et 1
 
-3. **Critères d'information**
+3. Critères d'information
+
    - BIC, AIC en cadre probabiliste
+
    - Pénalisent la complexité
 :::
 
-## Points clés à retenir
+## Récapitulatif
 
-::: {.incremental}
-- **Classification non-supervisée** : Découverte de structure sans étiquettes
-- **$k$-moyennes** : Méthode classique, efficace mais limitations
-- **$k$-médoïdes** : Alternative robuste, coût plus élevé
-- **Choix de $K$** : Crucial, plusieurs critères disponibles
-- **Initialisation** : Importante pour éviter minima locaux
-- **Prétraitement** : Standardisation et gestion des outliers essentielles
-:::
+<br>
 
-## Merci pour votre attention
+$k$-moyennes : Méthode classique, efficace mais limitations.
 
-**Questions ?**
+. . .
 
-::: {.fragment}
-*Classification non-supervisée : découvrir la structure cachée des données*
-:::
+$k$-médoïdes : Alternative robuste mais a un coût plus élevé.
+
+. . .
+
+Choix du nombre de groupes : Combinaison de critères pratiques et statistiques
+
+
+. . .
+
+<br>
+
+Prochaine étape → GMM
