--- a/contents/05-supervisee.en.qmd
+++ b/contents/05-supervisee.en.qmd
@@ -20,7 +20,11 @@ format:
 
 * TD: [link](../td/05-supervised-td.qmd)
 
+  - [Solution](../td/correction/Td_ Supervisee.pdf)
+
 * TP: [link](../tp/05-supervised-tp.qmd)
+
+  - [Corrigé](../tp/correction/TP_Supervisee.R)
 
 ## Outline
 
