--- a/contents/05-supervisee.en.qmd
+++ b/contents/05-supervisee.en.qmd
@@ -24,7 +24,7 @@ format:
 
 * TP: [link](../tp/05-supervised-tp.qmd)
 
-  - [Corrigé](../tp/correction/TP_Supervisee.R)
+  - [Solution](../tp/correction/TP_Supervisee.R)
 
 ## Outline
 
