--- a/contents/06-nonsupervisee.en.qmd
+++ b/contents/06-nonsupervisee.en.qmd
@@ -20,6 +20,8 @@ format:
 
 * TD: [link](../td/06-unsupervised-td.qmd)
 
+  - [Solution](../td/correction/Td_ Non supervisee.pdf)
+
 * TP: [link](../tp/06-unsupervised-tp.qmd)
 
 ## Outline
