Corrige TP non supervisee

--- a/contents/06-nonsupervisee.en.qmd
+++ b/contents/06-nonsupervisee.en.qmd
@@ -24,6 +24,8 @@ format:
 
 * TP: [link](../tp/06-unsupervised-tp.qmd)
 
+  - [Corrigé](../tp/correction/TP_NonSupervisee.R)
+  
 ## Outline
 
 1. [Hierarchical models](./unsupervised/02-hierarchy.qmd)
