--- a/contents/04-dimension.en.qmd
+++ b/contents/04-dimension.en.qmd
@@ -18,7 +18,7 @@ format:
 
 * TD: [link](../td/04-dimension-td.qmd)
 
-  - [Solution](../td/correction/Td_ Dimension.pdf)
+  - [Solution](../td/correction/Td_Dimension.pdf)
 
 * TP: [link](../tp/04-dimension-tp.qmd)
 
