--- a/contents/05-supervisee.en.qmd
+++ b/contents/05-supervisee.en.qmd
@@ -20,7 +20,7 @@ format:
 
 * TD: [link](../td/05-supervised-td.qmd)
 
-  - [Solution](../td/correction/Td_ Supervisee.pdf)
+  - [Solution](../td/correction/Td_Supervisee.pdf)
 
 * TP: [link](../tp/05-supervised-tp.qmd)
 
