--- a/contents/05-supervisee.qmd
+++ b/contents/05-supervisee.qmd
@@ -19,7 +19,7 @@ format:
 
 * TD: [link](../td/05-supervised-td.qmd)
 
-  - [Corrigé](../td/correction/Td_ Supervisee.pdf)
+  - [Corrigé](../td/correction/Td_Supervisee.pdf)
 
 * TP: [link](../tp/05-supervised-tp.qmd)
 
