--- a/contents/06-nonsupervisee.en.qmd
+++ b/contents/06-nonsupervisee.en.qmd
@@ -20,7 +20,7 @@ format:
 
 * TD: [link](../td/06-unsupervised-td.qmd)
 
-  - [Solution](../td/correction/Td_Non supervisee.pdf)
+  - [Solution](../td/correction/Td_Nonsupervisee.pdf)
 
 * TP: [link](../tp/06-unsupervised-tp.qmd)
 
