--- a/contents/06-nonsupervisee.qmd
+++ b/contents/06-nonsupervisee.qmd
@@ -19,7 +19,7 @@ format:
 
 * TD: [link](../td/06-unsupervised-td.qmd)
 
-  - [Corrigé](../td/correction/Td_Non supervisee.pdf)
+  - [Corrigé](../td/correction/Td_Nonsupervisee.pdf)
 
 * TP: [link](../tp/06-unsupervised-tp.qmd)
 
